Update CONTINUATION_PROMPT: bitcoinj 0.14.7 pivot + Phase 2 foundation/birthdate
Records the CRITICAL switch to bitcoinj/libdohj 0.14.7 (spongycastle, app keeps bcprov 1.70) and the
Phase 2 progress: foundation + key-import gate (d8b3f25) and spv_birthdate policy (5e776b5) shipped.
Updates the arc, the 0.14 API gotchas (toAddress, NODE_BLOOM, WindowsMMapHack), the remaining Phase 2
work (DogecoinSpvService, DogecoinSpvDataSource + sheet selector, checkpoints), and the canaries. Last
green 5e776b5.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>